--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -6,5 +6,5 @@ INTRO1="The Syslog Server is log server based on the rsyslog package and Adiscon
 INTRO2="You can receive logs from Miniserver or from another system."
 
 [NAVBAR]
-FIRST="Adiscon Log Analyzer"
-SECOND="Configuration"
+FIRST="Log Server"
+SECOND="Adiscon Log Analyzer"
