--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -6,5 +6,23 @@ INTRO1="The Syslog Server is log server based on the rsyslog package and Adiscon
 INTRO2="You can receive logs from Miniserver or from another system."
 
 [NAVBAR]
-FIRST="Log Server"
-SECOND="Adiscon Log Analyzer"
+FIRST="Log Server Config"
+SECOND="Log Analyzer Config"
+THIRD="Log Analyzer"
+
+[LOGS]
+HEAD="Remote Logs"
+NEW="New Remote Log"
+NAME="Unique Name"
+IP="IP address of the LOG source"
+INFO="Details"
+DELTEXT1="Are you shure, you want to remove configuration for:"
+DELTEXT2="Log file will be removed too!!!"
+SAVE="Save"
+DEL="Remove"
+DELETE="Yes!"
+RETURN="Return"
+
+[LOGDETAIL]
+HEAD="Details"
+
