--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -3,7 +3,7 @@ WIKI="http://www.loxwiki.eu/pages/viewpage.action?pageId=31457382"
 
 [MAIN]
 INTRO1="The Syslog Server is log server based on the rsyslog package and Adiscon Log Analyzer."
-INTRO2="You can receive logs from Miniserver or from another system."
+INTRO2="You can receive logs from Miniserver and other systems."
 
 [NAVBAR]
 FIRST="Log Server Config"
