Czech language and language correction

--- a/templates/lang/language_en.ini
+++ b/templates/lang/language_en.ini
@@ -1,14 +1,13 @@
 [LINKS]
-WIKI="http://www.loxwiki.eu/pages/viewpage.action?pageId=31457382"
+WIKI="http://www.loxwiki.eu/x/wQDgAQ"
 
 [MAIN]
 INTRO1="The Syslog Server is log server based on the rsyslog package and Adiscon Log Analyzer."
-INTRO2="You can receive logs from Miniserver and other systems."
+INTRO2="You can receive logs from Miniserver and other systems, that suport it."
 
 [NAVBAR]
 FIRST="Log Server Config"
-SECOND="Log Analyzer Config"
-THIRD="Log Analyzer"
+SECOND="Log Analyzer"
 
 [LOGS]
 HEAD="Remote Logs"
