--- a/templates/lang/language_de.ini
+++ b/templates/lang/language_de.ini
@@ -3,7 +3,7 @@ WIKI="http://www.loxwiki.eu/x/uQDgAQ"
 
 [MAIN]
 INTRO1="Der Syslog Server ist ein Protokoll-Server, der auf dem rsyslog Paket und dem Adiscon Log Analyzer basiert."
-INTRO2="Der Server kann Protokolle vom Miniserver und anderen Systemen empfangen, die dies unterstützen."
+INTRO2="Der Server kann Protokolle vom Miniserver und anderen Systemen empfangen, die dies unterstÃ¼tzen."
 
 [NAVBAR]
 FIRST="Protokoll Server Einstellung"
@@ -20,8 +20,7 @@ DELTEXT2="Die Protokolldatei wird ebenfalls entfernt!!!"
 SAVE="Speichern"
 DEL="Entfernen"
 DELETE="Jawoll!"
-RETURN="Zurück"
+RETURN="ZurÃ¼ck"
 
 [LOGDETAIL]
 HEAD="Details"
-
